# ltsm_stock_market_prediction

./: .gitignore  README.md  SQL Script.txt  StockAnalysisSQL_Scripts.sql  StockAnalysisSQL_Scripts_1.sql  docker-compose.yml  environment.yml  pyproject.toml
demo project/: Dockerfile  main.py  requirements.txt
demo project/app/: main.py  model.py
docker/database/: Dockerfile
docker/database/ddl/: stocks.sql
docker/lstm/: Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml
docker/lstm/lstm_stock_market_prediction/: conf.py  dao.py  etl.py  lstm.py  ltsm.py  model.py
docker/lstm/lstm_stock_market_prediction/model_repo/: AAPL_ltsm_60_day_model.pkl  AMD_ltsm_60_day_model.pkl  AMZN_ltsm_60_day_model.pkl  GM_ltsm_60_day_model.pkl  GOOGL_ltsm_60_day_model.pkl  INTC_ltsm_60_day_model.pkl  MSFT_ltsm_60_day_model.pkl  NVDA_ltsm_60_day_model.pkl  PFE_ltsm_60_day_model.pkl  TSLA_ltsm_60_day_model.pkl  appl_ltsm_60_day_model.pkl
docker/lstm/tests/: test_setup_model.py
docker/lstm/tests/data/historical_stock_prices/: AAPL.csv  AMD.csv  AMZN.csv  GM.csv  GOOGL.csv  INTC.csv  MSFT.csv  NVDA.csv  PFE.csv  TSLA.csv
docker/ltsm/: .bash_history  Dockerfile  docker-entrypoint.sh
docker/ltsm/ltsm_stock_market_prediction/model_repo/: appl_ltsm_60_day_model.pkl
ltsm_stock_market_prediction/: algo.py  conf.py  ltsm.py
ltsm_stock_market_prediction/model_repo/: appl_ltsm_60_day_model.pkl
notebooks/: LR_Lasso_SVM.ipynb  ML_Projectxx.ipynb  stock-market-analysis-prediction-using-lstm.ipynb  stockpred5214.ipynb  yfinance.ipynb
tests/: conftest.py  test_setup_model.py
