[tool.poetry]
name = "ltsm_stock_market_prediction"
version = "0.1.0"
description = ""
authors = ["Jibril Moalim <Jibrilmoalim@gmail.com>",
           "Lakshmi Prasanna Valdas <lakshmiprasannavaldas@my.unt.edu>",
           "Larry Johnson <johnson.larry.l@gmail.com>",
           "Monish Galla <monishgalla@my.unt.edu>",
           "Vamshidhar Reddy Venumula <vamshidharreddyvenumula@my.unt.edu>"]

[tool.poetry.dependencies]
hypothesis = "^6.54.4"
keras = "2.13.1"
pandas = "^2.1.0"
pandas-datareader = "^0.10.0"
python = ">=3.9.5,<3.10"
scikit-learn = "^1.3.0"
scipy = "^1.11.2"
tensorflow = "2.13.0"
yfinance = "^0.2.28"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"